--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'  %}
-{% block title %}Register{% endblock %}
+{% block title %}Login{% endblock %}
 {% block content %}
-<h1>Register to give feedback!</h1>
+<h1>Login to your account</h1>
 <form method="POST">
     {{ form.hidden_tag() }}
 
@@ -17,7 +17,8 @@
     </p>
     {% endfor %}
   
-    <button class="btn btn-success" type="submit">Register</button>
+    <button class="btn btn-success" type="submit">Login</button>
 </form>
-<p>Have an account? <a href="/login">Log in to your account!</a></p>
+
+<p>Don't have an account? <a href="/register">Get your free account today!</a></p>
 {% endblock %}
